[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phase_scan"
version = "1.0.0"
description = "A library, and some example notebooks for reconstructing the covariance matrix of a multi-mode gaussian state from quadrature samples"
authors = [
  { name="Emilie Gillet", email="emilie.gillet@etu.sorbonne-universite.fr" },
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "optax",
  "pytest",
  "tqdm"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/roseopicta/phase_scan"

[tool.black]
line-length = 80
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''